#
# Copyright (c) 2012-2014 ACE Project
# $COPYRIGHT$
#

AM_CPPFLAGS = -I$(top_builddir)/src/include -I$(top_srcdir)/src/include

noinst_LTLIBRARIES = libacpml_dl.la
libacpml_dl_la_LIBADD = -ldl
libacpml_dl_la_SOURCES = \
			 acpdl.c \
			 acpdl.h \
		 	 acpdl_malloc.c \
			 acpdl_malloc.h \
			 acpdl_vector.c \
			 acpdl_deque.c \
			 acpdl_list.c \
			 acpdl_set.c \
			 acpdl_multiset.c \
			 acpdl_map.c \
			 acpdl_ws.c \
			 acpbl.h

